fixed z-index for text bow

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     width: 260px;
     /*margin: auto; !important;*/
     /*min-width: 150px !important;*/
-    z-index: 1000;
+    z-index: 1400;
 	}
   /*Design for the collapseable navigation bar*/
 .navbar {
